# skid-monitor

./: .gitignore  Cargo.toml  README.md
client/skid-monitor-client/: Cargo.toml
client/skid-monitor-client/bindings/dotnet/: README.md
client/skid-monitor-client/docs/: avatar-client-ui.md
client/skid-monitor-client/docs/rfcs/: 0002-csharp-extension-developer-experience.md  0003-agent-pipeline-visibility.md  README.md
client/skid-monitor-client/docs/usecases/: README.md
client/skid-monitor-client/src/: extension.rs  lib.rs  modules.rs  receiver.rs  receiver_loop.rs
client/skid-monitor-client/src/modules/: file_share.rs
client/skid-monitor-client/src/test/: receiver.rs
client/skid-monitor-fe/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json
client/skid-monitor-fe/docs/: otel-vrm-dance-status.md
client/skid-monitor-fe/docs/rfcs/: 0001_replace_to_egui.md  0002-alerting-monitoring.md  0003-vrm-avatar-presenter.md  0004-alert-message-generation.md  README.md
client/skid-monitor-fe/examples/: custom-material.wgsl
client/skid-monitor-fe/src/: alert.rs  app.html  app.rs  components.rs  config.rs  edge.rs  lib.rs  main.rs  model.rs  signal.rs  storage.rs  ui_settings.rs  utils.rs  view.rs
client/skid-monitor-fe/src-tauri/: Cargo.toml  tauri.conf.json
client/skid-monitor-fe/src-tauri/src/: main.rs
client/skid-monitor-fe/src/alert/: tests.rs
client/skid-monitor-fe/src/components/: agents.rs  avatar.rs  counters.rs  database_metrics.rs  event_log.rs  header.rs  layout.rs  main_panels.rs  metrics.rs  node_detail.rs  nodes.rs  primitives.rs  sources.rs  trends.rs
client/skid-monitor-fe/src/components/agents/: action.rs
client/skid-monitor-fe/src/components/avatar/: model.rs  state.rs
client/skid-monitor-fe/src/components/avatar/vrm/: animation.rs  custom_shader.rs  loader.rs  mod.rs  renderer.rs  runtime.rs  shader.wgsl
client/skid-monitor-fe/src/components/layout/: mode.rs  tests.rs
client/skid-monitor-fe/src/components/main_panels/: kind.rs
client/skid-monitor-fe/src/edge/: tests.rs
client/skid-monitor-fe/src/model/: alert.rs  avatar.rs  event.rs  metric.rs  mod.rs  node.rs  runtime.rs
client/skid-monitor-fe/src/pages/: detail.rs  mod.rs  overview.rs
client/skid-monitor-fe/src/pages/detail/: action.rs
client/skid-monitor-fe/src/pages/overview/: action.rs
client/skid-monitor-fe/src/platform/: ingress.rs  mod.rs
client/skid-monitor-fe/src/platform/ingress/: cloud.rs  native.rs  web.rs
client/skid-monitor-fe/src/routes/: +page.svelte
client/skid-monitor-fe/src/signal/: tests.rs
client/skid-monitor-fe/src/state/: accessors.rs  events.rs  ingest.rs  lifecycle.rs  mod.rs  persistence.rs
client/skid-monitor-fe/src/storage/: command.rs  db.rs  mod.rs  path.rs  tests.rs  web.rs  worker.rs
client/skid-monitor-fe/src/ui_settings/: appearance.rs  background.rs  character_window.rs  mod.rs  tests.rs  window.rs
client/skid-monitor-fe/src/utils/: tests.rs
docs/: README.md  agent-continuous-deployment.md  architecture.md  cloud-solo-deployment.md  deployment.md  edge-agent-deployment.md  feature-status.md  getting-started.md  oidc-account-providers.md  postgresql-components-and-migrations.md  tauri-vrm-ui.md
docs/rfcs/: 0001-edge-capability-node-deployment.md  0001-initial-skid-monitor-integration.md  0002-extensible-media-provider.md  0002-node-config-and-transport-planes.md  0003-device-ingress-framing-and-safety.md  0004-compute-workload-probes-and-route-advice.md  0005-stream-telemetry-and-media-preview.md  README.md
interface/: Cargo.toml
interface/src/: lib.rs  metrics.rs  otlp.rs  protocol.rs  telemetry.rs
moniter-client/: Cargo.toml
moniter-client/src/: main.rs  receiver.rs  view.rs
moniter-edge-agent/: Cargo.toml
moniter-edge-agent/src/: main.rs
moniter-server/: Cargo.toml
moniter-server/src/: collector.rs  device_socket.rs  main.rs  system_metrics.rs  telemetry.rs  transport.rs
skid-compute-advisor/: Cargo.toml
skid-compute-advisor/docs/rfcs/: 0001-crate-role.md  README.md
skid-compute-advisor/docs/usecases/: README.md
skid-compute-advisor/src/: main.rs
skid-edge-agent/: Cargo.toml
skid-edge-agent/docs/rfcs/: 0001-crate-role.md  README.md
skid-edge-agent/docs/usecases/: README.md
skid-edge-agent/src/: main.rs
skid-edge-wire/: Cargo.toml
skid-edge-wire/src/: lib.rs
skid-file-node/: Cargo.toml
skid-file-node/docs/rfcs/: 0001-crate-role.md  README.md
skid-file-node/docs/usecases/: README.md
skid-file-node/src/: main.rs
skid-file-node/test/: test.rs
skid-monitor-agent/: CLOUD_EXPORT.md  Cargo.toml
skid-monitor-agent/docs/rfcs/: 0001-crate-role.md  README.md
skid-monitor-agent/docs/usecases/: README.md
skid-monitor-agent/examples/: agent-cloud-config.json  agent-config.json
skid-monitor-agent/scripts/: install-linux.sh
skid-monitor-agent/src/: collector.rs  config.rs  database_logs.rs  device_socket.rs  exporters.rs  main.rs  otlp_receiver.rs  pipeline.rs  system_metrics.rs  telemetry.rs  transport.rs
skid-monitor-client/bindings/dotnet/: README.md
skid-monitor-client/bindings/dotnet/Skid.Monitor.Client.ExtensionHost/: Skid.Monitor.Client.ExtensionHost.csproj
skid-monitor-client/docs/: README.md  avatar-client-ui.md
skid-monitor-client/docs/rfcs/: 0001-crate-role.md  0001-csharp-extension-developer-experience.md  README.md
skid-monitor-client/docs/usecases/: README.md
skid-monitor-client/src/: main.rs  receiver.rs  view.rs
skid-monitor-core/: Cargo.toml
skid-monitor-core/src/: envelope.rs  lib.rs  projection.rs  store.rs
skid-monitor-server/: Cargo.toml
skid-monitor-server/migrations/: 0001_cloud_signal_store.sql
skid-monitor-server/src/: api.rs  auth.rs  config.rs  ingress.rs  lib.rs  store.rs
skid-monitor-server/tests/: postgres_store.rs
skid-protocol/: Cargo.toml
skid-protocol/docs/rfcs/: 0001-crate-role.md  0002-edge-wire-interface-split.md  README.md
skid-protocol/docs/usecases/: README.md
skid-protocol/src/: frame.rs  lib.rs  metrics.rs  otlp.rs
(+6 files in other folders)
