[workspace]
resolver = "3"
members = [
    "skid-protocol",
    "skid-monitor-agent",
    "skid-monitor-client",
    "skid-edge-agent",
    "skid-file-node",
    "skid-compute-advisor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# 공유 라이브러리: client/server/edge agent가 동일한 프로토콜·타입을 사용한다
skid-protocol = { path = "skid-protocol" }

# 신호 타입 직렬화: agent와 client는 TCP 경계로 나뉠 수 있으므로 protocol 타입은 직렬화 가능해야 한다
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenTelemetry 자체 계측 스택 (0.31 코호트, tracing-opentelemetry는 0.31에 대응하는 0.32)
opentelemetry = { version = "0.31", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "logs", "rt-tokio", "testing"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "with-serde", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt"] }
tokio = { version = "1", features = ["full"] }
