[package]
name = "skid-monitor-agent"
version.workspace = true
edition.workspace = true

[dependencies]
skid-protocol.workspace = true

# OpenTelemetry 자체 계측
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-proto.workspace = true
opentelemetry-appender-tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

# Signal 직렬화 후 TCP 전송
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true

# Linux host filesystem stats (/proc + statvfs)
libc = "0.2"
