[package]
name = "skid-monitor-agent"
version.workspace = true
edition.workspace = true

[dependencies]
skid-edge-wire.workspace = true
skid-protocol.workspace = true

# OpenTelemetry 자체 계측
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-proto.workspace = true
opentelemetry-appender-tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

# Signal 직렬화 후 TCP 전송
serde.workspace = true
serde_json.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Linux host filesystem stats (/proc + statvfs)
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
