[package]
name = "skid-protocol"
version.workspace = true
edition.workspace = true

# 라이브러리 크레이트: client와 server가 공유하는 프로토콜과 데이터 타입을 제공한다.
[lib]
name = "skid_protocol"
path = "src/lib.rs"

[dependencies]
# 신호 타입을 TCP 경계 너머로 보내기 위한 직렬화.
serde = { workspace = true }
serde_json.workspace = true

# server-client 경계는 OTLP export request 타입을 공유한다.
opentelemetry-proto.workspace = true
