[package]
name = "skid-protocol"
version.workspace = true
edition.workspace = true

# 라이브러리 크레이트: client와 server가 공유하는 프로토콜과 데이터 타입을 제공한다.
[lib]
name = "skid_protocol"
path = "src/lib.rs"

[dependencies]
# 신호 타입을 TCP 경계 너머로 보내기 위한 직렬화.
serde = { workspace = true }
serde_json.workspace = true

# server-client 경계는 OTLP export request 타입을 공유한다. 브라우저는
# generated message model만 사용하고 native 빌드만 tonic transport를 포함한다.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opentelemetry-proto.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "with-serde", "trace", "metrics", "logs"] }
