[package]
name = "skid-monitor-fe"
version.workspace = true
edition.workspace = true

[features]
default = ["low-spec"]
low-spec = ["eframe/glow"]
high-spec = ["eframe/wgpu"]

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "wayland", "x11"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
libc = "0.2"
skid-monitor-client.workspace = true
skid-protocol.workspace = true
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio.workspace = true
