[package]
name = "skid-monitor-fe"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["low-spec"]
low-spec = ["eframe/glow"]
high-spec = ["eframe/wgpu"]
web = ["eframe/wgpu"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
skid-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "wayland", "x11"] }
libc = "0.2"
skid-monitor-client.workspace = true
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "wgpu"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "BinaryType",
    "CloseEvent",
    "console",
    "ErrorEvent",
    "Event",
    "HtmlCanvasElement",
    "Location",
    "MessageEvent",
    "Storage",
    "UrlSearchParams",
    "WebSocket",
    "Window",
] }
